--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,26 +1,26 @@
-.top-bar{
+.top-bar {
     margin-bottom:20px;
 }
 
-ul{
+ul {
     list-style: none;
     margin:0;
 }
 
-.book{
+.book {
     text-align:center;
 }
 
-.book h4{
+.book h4 {
     margin-top: 15px;
 }
 
-.price{
+.price {
     margin:5px;
     font-size:18px;
 }
 
-.price span{
+.price span {
     color:green;
     background:#f4f4f4;
     padding:10px;
@@ -28,7 +28,7 @@ ul{
     border-radius:50%;
 }
 
-footer{
+footer {
     margin-top:40px;
     padding:10px;
     text-align:center;
@@ -38,7 +38,7 @@ footer{
     float:left;
 }
 
-ul.error li, ul.info li, ul.success li{
+ul.error li, ul.info li, ul.success li {
     margin:20px, 0, 20px 0;
     padding: 15px;
     border: 1px solid transparent;
@@ -46,22 +46,24 @@ ul.error li, ul.info li, ul.success li{
     list-style: none;
 }
 
-ul.error li{
+ul.error li {
     color: #a94442;
     background-color: #f2dede;
     border-color: #ebccd1;
 }
 
-ul.info li{
+ul.info li {
     color: #31708f;
     background-color: #d9edf7;
     border-color: #bce8f1;
 }
 
-ul.success li{
+ul.success li {
     color: #3c763d;
     background-color: #dff0d8;
     border-color: #d6e9c6;
 }
 
-h2 span{font-size:18px;}
+h2 span {
+  font-size:18px;
+}
